# SVF-TS

./: CMakeLists.txt  DEVELOPMENT_PLAN.md  README.md  run_ae_tests.sh
docs/: CTS_DEVELOPER_NOTES.md  CTS_MODULE_REFERENCE.md
svf-cts/: CMakeLists.txt
svf-cts/include/CTS/: CTSICFGBuilder.h  CTSModule.h  CTSParser.h  CTSSVFIRBuilder.h  SSABuilder.h  ScopeManager.h
svf-cts/include/CTS/stubs/: assert.h  ctype.h  errno.h  fcntl.h  float.h  inttypes.h  limits.h  math.h  signal.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  time.h  unistd.h  wchar.h
svf-cts/include/CTS/stubs/sys/: socket.h  stat.h  types.h
svf-cts/lib/: CTSICFGBuilder.cpp  CTSModule.cpp  CTSOverrides.cpp  CTSParser.cpp  CTSSVFIRBuilder.cpp  SSABuilder.cpp  ScopeManager.cpp
svf-cts/test/: CMakeLists.txt  compare_dot.py  generate_ground_truth.sh  render_dots.sh  run_ab_test.sh
svf-cts/test/c_sources/: array_access.c  control_flow.c  function_call.c  malloc_free.c  mixed_access.c  nested_struct.c  pointer_ops.c  simple_assign.c  struct_field.c
svf-cts/test/c_sources/include_test/: common.h  main.c
svf-cts/test/output/: llvm_array_access_icfg.dot  llvm_array_access_pag.dot  llvm_control_flow_icfg.dot  llvm_control_flow_pag.dot  llvm_function_call_icfg.dot  llvm_function_call_pag.dot  llvm_malloc_free_icfg.dot  llvm_malloc_free_pag.dot  llvm_mixed_access_icfg.dot  llvm_mixed_access_pag.dot  llvm_pointer_ops_icfg.dot  llvm_pointer_ops_pag.dot  llvm_simple_assign_icfg.dot  llvm_simple_assign_pag.dot  llvm_struct_field_icfg.dot  llvm_struct_field_pag.dot  ts_array_access_icfg.dot  ts_array_access_pag.dot  ts_control_flow_icfg.dot  ts_control_flow_pag.dot  ts_function_call_icfg.dot  ts_function_call_pag.dot  ts_malloc_free_icfg.dot  ts_malloc_free_pag.dot  ts_mixed_access_icfg.dot  ts_mixed_access_pag.dot  ts_pointer_ops_icfg.dot  ts_pointer_ops_pag.dot  ts_simple_assign_icfg.dot  ts_simple_assign_pag.dot  ts_struct_field_icfg.dot  ts_struct_field_pag.dot
svf-cts/tools/cts-ae/: CMakeLists.txt  cts-ae.cpp
svf-cts/tools/cts-svf/: CMakeLists.txt  cts-svf.cpp
svf-cts/tools/cts-test/: CMakeLists.txt  cts-test.cpp
svf/include/Graphs/: BasicBlockG.h  ICFGEdge.h
svf/include/SVFIR/: SVFIR.h  SVFType.h
svf/include/Util/: ExtAPI.h
svf/lib/AE/Svfexe/: AEDetector.cpp  AbstractInterpretation.cpp
svf/lib/SVFIR/: SVFStatements.cpp
